# ffxiv_stats

./: .gitignore  README.md  pyproject.toml  setup.py
data/6_5_WHM/: 6_5_whm_assize.csv  6_5_whm_glare_3.csv  test.ipynb
examples/: deterministic-rotations.ipynb  examples.ipynb  performance_error_analysis.ipynb  stochastic-rotations.ipynb
examples/smn-rotation-comparison/: fryte-results.csv  smn-rotation-analysis.ipynb  smn-rotation.csv
ffxiv_stats/: __init__.py  jobs.py  modifiers.py  moments.py  rate.py
ffxiv_stats/tests/: test_jobs.py  test_rate.py
ffxiv_stats/tests/data/dawntrail/: drk_pet_570p.csv
tests/: test_jobs.py  test_rate.py
tests/data/dawntrail/: drk_auto_90p.csv  drk_pet_420p.csv  drk_pet_620p.csv  smn_pet_150p.csv  smn_pet_160p.csv
