[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ffxiv_stats"
authors = [{name = "Acerola Paracletus", email = "ffxivacerola@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [    
    'numpy >= 1.20.2',
    'matplotlib >= 3.4.2', 
    'pandas >= 1.2.4',
    'scipy >= 1.6.3'
    ]
    
[project.urls]
Home = "https://github.com/ffxiv-acerola/ffxiv_stats"
